# nexus-emotes

./: .env  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build.yaml
src/: background.rs  chat_events.rs  chat_message.rs  giftex.rs  lib.rs  settings.rs  seventv.rs  util.rs
src/chat_events/: mod.rs  raw.rs
