[package]
name = "nexus_emotes"
version = "0.2.0"
edition = "2024"
authors = ["belst"]
description = "New Squad Message Viewer with emote support"

[lib]
crate-type = ["cdylib"]
name = "nexus_emotes"

[dependencies]
anyhow = "1.0.98"
log = "0.4.27"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
ureq = { version = "3.0.11", features = ["json"] }
url = "2.5.4"

[dependencies.nexus]
git = "https://github.com/belst/nexus-rs"
features = ["log", "extras", "log_filter"]
