[package]
name = "nexus_emotes"
version = "0.3.2"
edition = "2024"
authors = ["belst"]
description = "Floating 7tv emotes when mentioned in chat"

[lib]
crate-type = ["cdylib"]
name = "nexus_emotes"

[dependencies]
anyhow = "1.0.100"
gif = "0.13.3"
gif-dispose = "5.0.1"
log = "0.4.28"
open = "5.3.2"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.140"
ureq = { version = "3.0.11", features = ["json"] }
url = "2.5.4"
time = {version = "0.3.44", features = ["std"]}
strum = { version = "0.27.2", features = ["derive"] }

[dependencies.nexus]
git = "https://github.com/belst/nexus-rs"
features = ["log", "extras", "log_filter"]

[dependencies.windows]
version = "0.60.0"
features = [
    "System",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_System_Time",
]

